--- a/record/record.css
+++ b/record/record.css
@@ -12,11 +12,7 @@
 .main-container {
     margin-top: 10px;
     padding-bottom: 20px;
-    margin-bottom: -30px;
-}
-
-#footer {
-    top: -10px;
+    margin-bottom: -50px;
 }
 
 /******Related Entities**************/
