--- a/recordedit/recordEdit.css
+++ b/recordedit/recordEdit.css
@@ -2,11 +2,7 @@
     overflow-y: auto;
     overflow-x: hidden;
     margin-top: 5px;
-    padding-bottom: 30px;
-}
-
-#footer {
-    top: -35px;
+    padding-bottom: 40px;
 }
 
 .padding-top-10 {
